[gd_scene load_steps=16 format=3 uid="uid://dmjjey2624xf5"]

[ext_resource type="Script" path="res://scenes/npc.gd" id="1_dkacp"]
[ext_resource type="Script" path="res://scenes/animation_control.gd" id="2_732vn"]
[ext_resource type="Texture2D" uid="uid://dedwq7ilelv12" path="res://assets/art/npc1_left0.png" id="3_81jhf"]
[ext_resource type="Script" path="res://scenes/mood.gd" id="3_rojyy"]
[ext_resource type="Script" path="res://scenes/personality.gd" id="4_gg2jo"]
[ext_resource type="Texture2D" uid="uid://dthbbtx0h2r47" path="res://assets/art/npc1_left1.png" id="4_k47js"]
[ext_resource type="Script" path="res://scenes/move_control.gd" id="5_3yays"]
[ext_resource type="Texture2D" uid="uid://m4r7ttefa6ov" path="res://assets/art/npc1_left2.png" id="5_tscsb"]
[ext_resource type="Script" path="res://scenes/behavior.gd" id="6_kbocg"]
[ext_resource type="Texture2D" uid="uid://cddu3uh7xjnnc" path="res://assets/art/npc1_right0.png" id="6_nuhfu"]
[ext_resource type="Texture2D" uid="uid://dqef7qptw3crt" path="res://assets/art/npc1_right1.png" id="7_fa8nq"]
[ext_resource type="Script" path="res://scenes/navigation_control.gd" id="8_2uhr0"]
[ext_resource type="Texture2D" uid="uid://cgwqskmm4psc0" path="res://assets/art/npc1_right2.png" id="8_iauxo"]

[sub_resource type="SpriteFrames" id="SpriteFrames_p1b4l"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_81jhf")
}, {
"duration": 1.0,
"texture": ExtResource("4_k47js")
}, {
"duration": 1.0,
"texture": ExtResource("5_tscsb")
}],
"loop": true,
"name": &"left",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_nuhfu")
}, {
"duration": 1.0,
"texture": ExtResource("7_fa8nq")
}, {
"duration": 1.0,
"texture": ExtResource("8_iauxo")
}],
"loop": true,
"name": &"right",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_1dkxc"]
radius = 22.0

[node name="NPC" type="CharacterBody2D" node_paths=PackedStringArray("nav_control") groups=["mobs"]]
texture_filter = 1
texture_repeat = 1
collision_layer = 4
motion_mode = 1
wall_min_slide_angle = 0.0
platform_floor_layers = 4278190080
script = ExtResource("1_dkacp")
nav_control = NodePath("NavigationControl")
metadata/_edit_group_ = true

[node name="AnimationControl" type="Node2D" parent="."]
script = ExtResource("2_732vn")

[node name="Model" type="AnimatedSprite2D" parent="AnimationControl"]
texture_filter = 1
texture_repeat = 1
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_p1b4l")
animation = &"left"

[node name="NPCHitbox" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("CircleShape2D_1dkxc")

[node name="Personality" type="Node2D" parent="."]
script = ExtResource("4_gg2jo")

[node name="Behavior" type="Node2D" parent="." node_paths=PackedStringArray("personality", "nav_control")]
script = ExtResource("6_kbocg")
personality = NodePath("../Personality")
nav_control = NodePath("../NavigationControl")

[node name="Mood" type="Node2D" parent="."]
script = ExtResource("3_rojyy")

[node name="StageChangeCooldown" type="Timer" parent="Mood"]

[node name="MoveControl" type="Node2D" parent="."]
script = ExtResource("5_3yays")

[node name="NavigationControl" type="Node2D" parent="." node_paths=PackedStringArray("move_control", "behavior")]
script = ExtResource("8_2uhr0")
move_control = NodePath("../MoveControl")
behavior = NodePath("../Behavior")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="NavigationControl"]
path_max_distance = 10.0
avoidance_enabled = true
radius = 22.0
neighbor_distance = 200.0
max_neighbors = 5
time_horizon_agents = 0.5

[node name="RecalculateTargetTimer" type="Timer" parent="NavigationControl"]
wait_time = 0.2
autostart = true

[connection signal="timeout" from="Mood/StageChangeCooldown" to="Mood" method="_on_stage_change_cooldown_timeout"]
[connection signal="velocity_computed" from="NavigationControl/NavigationAgent2D" to="NavigationControl" method="_on_navigation_agent_2d_velocity_computed"]
[connection signal="timeout" from="NavigationControl/RecalculateTargetTimer" to="NavigationControl" method="_on_recalculate_target_timer_timeout"]
